--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 
+a {
+  color:greenyellow
+}
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
@@ -39,8 +42,10 @@ table {
   border-collapse: collapse;
 }
 
-.blue { color: #185875; }
-.yellow { color: #FFF842; }
+.wishlist-btn {
+  text-decoration: none;
+}
+
 
 .container {
   margin: 0 auto;
@@ -65,9 +70,10 @@ table {
 }
 
 .container tr:hover {
-  background-color: #464A52;
-  box-shadow: 0px 0px 10px #ffffff;
+  background-color: #2C3446;
+  color: #403E10;
 }
+
 
 .container td:hover {
   background-color: #FFF842;
@@ -84,4 +90,19 @@ table {
 @media (max-width: 800px) {
   .container td:nth-child(4),
   .container th:nth-child(4) { display: none; }
+}
+.back-button {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.link {
+  text-decoration: none;
+  color: purple;
+}
+
+.link:hover {
+  color: red;
+  text-decoration: underline;
 }
